test/libsolidity/syntaxTests/denominations/invalid_denomination_on_string.sol
contract C {
	string s = "abc" ether;
}
// ----
// ParserError 2314: (31-36): Expected ';' but got 'ether'
